fix extra padding

--- a/src/theme/CodeBlock/Line/styles.module.css
+++ b/src/theme/CodeBlock/Line/styles.module.css
@@ -48,6 +48,7 @@ the background in custom CSS file due bug https://github.com/facebook/docusaurus
 .codeLine {
   display: table-row;
   counter-increment: line-count;
+  padding-left: 0;
 }
 
 .noLineNumbers {
